Name:		SLHAParser
Version:	0.0
Synopsis:	
Description: 	
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     


Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base == 4.*, 
                   mtl == 2.1.*, 
                   directory == 1.1.*,	
                   filepath == 1.3.*,
                   cmdargs == 0.9.*
  Exposed-Modules: 
                   HEP.Parser.SLHAParser.ProgType
                   HEP.Parser.SLHAParser.Job
                   HEP.Parser.SLHAParser.Command
  Other-Modules: 


Executable slhaparser
  Main-is: slhaparser.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base == 4.*, 
                   mtl == 2.1.*, 
                   directory == 1.1.*, 
                   filepath == 1.3.*,
                   cmdargs == 0.9.*, 
                   SLHAParser


 
		 